5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1789_3139.log
== SUBMITION (2019-05-29 19:15:23) 
-- CODE:
from numpy import*
vetor = array(eval(input("vetores: ")))
i = 0
x = size(vetor)
y = 0

while( i != x):
	c = c + (vetor[i] ** 1/3)
	i = i + 1

	h = (c / x) ** 3
print(round(h, 2))
-- EXECUTION TIME:
0.492963
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1789/3139/main.py", line 8, in <module>
    c = c + (vetor[i] ** 1/3)
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:16:11) 
-- CODE:
from numpy import*
vetor = array(eval(input("vetores: ")))
i = 0
x = size(vetor)
y = 0

while( i != x):
	y = y + (vetor[i] ** 1/3)
	i = i + 1

	h = (y / x) ** 3
print(round(h, 2))
-- EXECUTION TIME:
0.537557
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.36
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
2.11
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
1.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:16:14) 
-- CODE:
from numpy import*
vetor = array(eval(input("vetores: ")))
i = 0
x = size(vetor)
y = 0

while( i != x):
	y = y + (vetor[i] ** 1/3)
	i = i + 1

	h = (y / x) ** 3
print(round(h, 2))
-- EXECUTION TIME:
0.615983
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.36
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
2.11
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
1.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:16:15) 
-- CODE:
from numpy import*
vetor = array(eval(input("vetores: ")))
i = 0
x = size(vetor)
y = 0

while( i != x):
	y = y + (vetor[i] ** 1/3)
	i = i + 1

	h = (y / x) ** 3
print(round(h, 2))
-- EXECUTION TIME:
0.74787
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.36
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
2.11
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
1.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:16:41) 
-- CODE:
from numpy import*
vetor = array(eval(input("vetores: ")))
i = 0
x = size(vetor)
y = 0

while( i != x):
	y = y + vetor[i] ** (1/3)
	i = i + 1

	h = (y / x) ** 3
print(round(h, 2))
-- EXECUTION TIME:
0.568647
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
2.85
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
